using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Game.Values.AnimationParameters
{
    class Jean
    {
        public const string Idle = "Idle";
        public const string ShieldExplosion = "ShieldExplosion";
        public const string LeftShoot = "LeftShoot";
        public const string RightShoot = "RightShoot";
        public const string BothHandShoot = "BothHandShoot";
    }
}
